--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
+
+#background-vanta {
+    position: absolute;
+    width: 98%;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    z-index: -1;
+}
+
+
 .App {
-  text-align: center;
+    width: 100%;
+    height: 100vh;
+    /*
+    background-image: url("../assets/image/fondo.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: white;
+    */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-layout {
+    width: 80%;
+    margin: auto;    
 }
